Fix site overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,19 @@
     border: none;
 }
 
+html {
+    body-sizing: border-box;
+}
+
+*,*::before, *::after {
+    box-sizing: inherit;
+}
+
 body {
     font-family: noto-sans, sans-serif;
     font-weight: 300;
     color: #395273;
+    overflow-x: hidden;
 }
 
 /* Remove bullets from all list items in the site */
@@ -117,6 +126,7 @@ nav a:hover {
     position: relative;
     background-attachment: fixed;
     background-size: cover;
+    overflow: hidden;
 
 
 }
@@ -148,6 +158,7 @@ nav a:hover {
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
+        overflow: hidden;
     }
 
     #cover-text {
@@ -248,6 +259,7 @@ nav a:hover {
     width: 100%;
     min-height: 100vh;
     background-color: rgba(57, 82, 115, .8);
+    overflow: hidden;
 }
 
 #about-container {
@@ -297,6 +309,7 @@ nav a:hover {
         float: none;
         width: 100%;
         margin: auto;
+        overflow: hidden;
     }
 
     #about-image {
@@ -317,6 +330,7 @@ nav a:hover {
     width: 100%;
     min-height: 100vh;
     clear: both;
+    overflow: hidden;
 
 }
 
@@ -378,6 +392,7 @@ nav a:hover {
         display: block;
         margin: auto;
         padding-top: 50px;
+        overflow: hidden;
     }
 
 
@@ -455,6 +470,7 @@ nav a:hover {
     width: 100%;
     overflow: auto;
     clear: both;
+    overflow: hidden;
 }
 
 .case-container {
@@ -520,6 +536,7 @@ nav a:hover {
         width: 100%;
         display: block;
         margin: auto;
+        overflow: hidden;
     }
 
     .case-image {
@@ -539,6 +556,7 @@ nav a:hover {
     width: 100%;
     height: 100vh;
     clear: both;
+    overflow: hidden;
 }
 
 /* Contact image */
@@ -550,6 +568,7 @@ nav a:hover {
     filter: blur(2px);
     -webkit-filter: blur(2px);
     position: relative;
+    overflow: hidden;
 }
 
 #contact-container {
@@ -682,6 +701,7 @@ nav a:hover {
     #contact-bg-image {
         width: 100%;
         height: 100%;
+        overflow: hidden;
     }
 
     #contact-container {
